src/css/header.module.css
.header {
	height: 140px;
	z-index: 1;
	display: grid;
	grid-template-rows: 90px 50px;
}

.banner {
	height: 90px;
	grid-row: 1;
	background: #002147;
	position: fixed;
	width: 100vw;
	margin: auto;
	border-bottom: 1px solid gray;
	display: grid;
	grid-template-columns: 1fr 140px 1fr;
	z-index: 1;
	box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
}

.listing {
	display: flex;
	flex-direction: column;
}

.oucc_logo {
	grid-column: 2;
	width: 140px;
	height: 140px;
	display: block;
	background: center top no-repeat;
	background-position: 0px 0px;
	cursor: pointer;
	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.4);
}

.oucc_logo:hover {
	background-position: 0px -141px;
}

.nav {
	display: flex;
	flex-direction: row;
	height: 65px;
	font-size: 0;
	background: #ff2200;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	width: 100%;
	/*: calc((100vw - 70px) / 2);*/
}

.listing > div {
	display: flex;
	align-items: center;
	height: 65px;
	font-size: 24px;
	padding: 0 40px;
	cursor: pointer;
}

.listing > div > a {
	display: flex;
	align-items: center;
	height: 65px;
	margin: 0;
	vertical-align: top;
}

.left {
	grid-column: 1;
	margin: 0 0 0 auto;
	justify-content: flex-end;
}

.right {
	grid-column: 3;
	margin: 0 0 0 auto;
	justify-content: flex-start;
}

.nav a {color: white}
.nav a:link {text-decoration: none}
.nav a:visited {text-decoration: none}
.nav a:active {text-decoration: none}
.nav a:hover {text-decoration: none}
.nav div:hover {
	background: #002147;
}

.subnav {
	display: flex;
	flex-direction: column;
	grid-row: 2;
	list-style-type: none;
	background: gray;
	width: inherit;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.subnav li {
	height: 65px;
	padding: 9px 20px 0;
	cursor: pointer;
}

.subnav li a {
	display: flex;
	align-items: center;
	color: white;
	font-size: 20px;
	height: inherit;
}

.subnav li:hover {
	background: #002147;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	border-right: 5px solid #ff2200;
}

.subnav li.selected {
	background: #002147;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	border-right: 5px solid #ff2200;
}

.newsFeed {
	grid-row: 2;
	height: 50px;
	display: flex;
	align-items: center;
}

.newsFeed div.intro {
	padding: 0 15px 0 30px;
	min-width: 120px;
	border-right: 1px solid gray;
}

.newsFeed div.runner {
	display: flex;
	flex-direction: row;
	overflow: scroll;
	white-space: nowrap;
	margin: 0 30px 0 0;
	font-size: 12;
	border-right: 1px solid gray;
	max-width: calc(100vw - 210px)
}

.newsFeed div.runner > div {
	display: inherit;
}

.newsFeed div.runner a {
	padding: 0 20px;
}

